--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,16 +20,16 @@ services:
             - ./conf/wso2esb/authenticators.xml:/opt/wso2esb-$ESB_VERSION/repository/conf/security/authenticators.xml
             - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2esb-$ESB_VERSION/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
 
-    brs:
-        image: eristoddle/wso2esb:5.0.0
-        ports:
-            - $BRS_HTTPS_PORT:9443
-            - $BRS_HTTP_PORT:9763
-        volumes:
-            - ./conf/brs/master-datasources.xml:/opt/wso2esb-$ESB_VERSION/repository/conf/datasources/master-datasources.xml
-            - ./conf/brs/registry.xml:/opt/wso2esb-$ESB_VERSION/repository/conf/registry.xml
-            - ./conf/brs/authenticators.xml:/opt/wso2esb-$ESB_VERSION/repository/conf/security/authenticators.xml
-            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2esb-$ESB_VERSION/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
+    # brs:
+    #     image: eristoddle/wso2esb:5.0.0
+    #     ports:
+    #         - $BRS_HTTPS_PORT:9443
+    #         - $BRS_HTTP_PORT:9763
+    #     volumes:
+    #         - ./conf/brs/master-datasources.xml:/opt/wso2esb-$ESB_VERSION/repository/conf/datasources/master-datasources.xml
+    #         - ./conf/brs/registry.xml:/opt/wso2esb-$ESB_VERSION/repository/conf/registry.xml
+    #         - ./conf/brs/authenticators.xml:/opt/wso2esb-$ESB_VERSION/repository/conf/security/authenticators.xml
+    #         - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2esb-$ESB_VERSION/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
 
     greg:
         image: eristoddle/wso2greg:5.3.0
@@ -79,8 +79,13 @@ services:
             - ./conf/wso2am/authenticators.xml:/opt/wso2am-$APIM_VERSION/repository/conf/security/authenticators.xml
             - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2am-$APIM_VERSION/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
 
-    # as:
-    #     image: eristoddle/wso2as:5.3.0
-    #     ports:
-    #
-    #     volumes:
+    as:
+        image: eristoddle/wso2as:5.3.0
+        ports:
+            - $AS_HTTPS_PORT:9443
+            - $AS_HTTP_PORT:9763
+        volumes:
+            - ./conf/wso2as/master-datasources.xml:/opt/wso2as-$AS_VERSION/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2as/registry.xml:/opt/wso2as-$AS_VERSION/repository/conf/registry.xml
+            - ./conf/wso2as/authenticators.xml:/opt/wso2as-$AS_VERSION/repository/conf/security/authenticators.xml
+            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2as-$AS_VERSION/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
