--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,6 @@ services:
             - ./conf/wso2esb/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2esb/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
             - ./conf/wso2esb/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
-            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2esb-5.0.0/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
 
     brs:
         image: eristoddle/wso2esb:5.0.0
@@ -26,10 +25,9 @@ services:
             - 9444:9443
             - 9764:9763
         volumes:
-            - ./conf/brs/master-datasources.xml:/opt/esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - ./conf/brs/registry.xml:/opt/esb-5.0.0/repository/conf/registry.xml
-            - ./conf/brs/authenticators.xml:/opt/esb-5.0.0/repository/conf/security/authenticators.xml
-            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/esb-5.0.0/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
+            - ./conf/brs/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - ./conf/brs/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - ./conf/brs/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
 
     greg:
         image: eristoddle/wso2greg:5.3.0
@@ -41,7 +39,6 @@ services:
             - ./conf/wso2greg/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2greg/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
             - ./conf/wso2greg/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
-            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2greg-5.3.0/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
 
     dss:
         image: eristoddle/wso2dss:3.5.1
@@ -52,7 +49,6 @@ services:
             - ./conf/wso2dss/master-datasources.xml:/opt/wso2dss-3.5.1repository/conf/datasources/master-datasources.xml
             - ./conf/wso2dss/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
             - ./conf/wso2dss/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
-            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2dss-3.5.1/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
 
     is:
         image: eristoddle/wso2is:5.2.0
@@ -66,7 +62,6 @@ services:
             - ./conf/wso2is/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
             - ./conf/wso2is/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
             - ./conf/wso2is/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
-            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2is-5.2.0/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
 
     am:
         image: eristoddle/wso2am:2.0.0
@@ -77,7 +72,6 @@ services:
             - ./conf/wso2am/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2am/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
             - ./conf/wso2am/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
-            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2am-2.0.0/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
 
     as:
         image: eristoddle/wso2as:5.3.0
@@ -88,4 +82,3 @@ services:
             - ./conf/wso2as/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2as/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
             - ./conf/wso2as/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
-            - ./lib/mysql-connector-java-5.1.38-bin.jar:/opt/wso2as-5.3.0/repository/components/lib/mysql-connector-java-5.1.38-bin.jar
