--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -4,18 +4,36 @@ services:
         image: mysql:5.7.10
         environment:
             - MYSQL_ROOT_PASSWORD=password
+        volumes_from:
+            - confdata
+        volumes:
+            - ./conf/scripts/mysql:/docker-entrypoint-initdb.d
+            - ./conf/mysql/:/etc/mysql/conf.d
+            - /var/lib/mysql
 
     esb:
         image: eristoddle/wso2esb:5.0.0
         ports:
             - 9443:9443
             - 9763:9763
+        volumes_from:
+            - confdata
+        volumes:
+            - ./conf/wso2esb/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2esb/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - ./conf/wso2esb/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
 
     brs:
         image: eristoddle/wso2esb:5.0.0
         ports:
             - 9444:9443
             - 9764:9763
+        volumes_from:
+            - confdata
+        volumes:
+            - ./conf/brs/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - ./conf/brs/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - ./conf/brs/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
 
     greg:
         image: eristoddle/wso2greg:5.3.0
@@ -23,12 +41,24 @@ services:
         ports:
             - 9445:9443
             - 9765:9763
+        volumes_from:
+            - confdata
+        volumes:
+            - ./conf/wso2greg/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2greg/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
+            - ./conf/wso2greg/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
 
     dss:
         image: eristoddle/wso2dss:3.5.1
         ports:
             - 9446:9443
             - 9766:9763
+        volumes_from:
+            - confdata
+        volumes:
+            - ./conf/wso2dss/master-datasources.xml:/opt/wso2dss-3.5.1repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2dss/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
+            - ./conf/wso2dss/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
 
     is:
         image: eristoddle/wso2is:5.2.0
@@ -36,15 +66,39 @@ services:
         ports:
             - 9447:9443
             - 9767:9763
+        volumes_from:
+            - confdata
+        volumes:
+            - ./conf/wso2is/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2is/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
+            - ./conf/wso2is/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
+            - ./conf/wso2is/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
+            - ./conf/wso2is/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
 
     am:
         image: eristoddle/wso2am:2.0.0
         ports:
             - 9448:9443
             - 9768:9763
+        volumes_from:
+            - confdata
+        volumes:
+            - ./conf/wso2am/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2am/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
+            - ./conf/wso2am/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
 
     as:
         image: eristoddle/wso2as:5.3.0
         ports:
             - 9449:9443
             - 9769:9763
+        volumes_from:
+            - confdata
+        volumes:
+            - ./conf/wso2as/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
+            - ./conf/wso2as/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
+            - ./conf/wso2as/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
+
+    confdata:
+        # build: .
+        image: localhost:5000/eristoddle/wso2-dev-config
