--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -6,6 +6,8 @@ services:
             - MYSQL_ROOT_PASSWORD=password
         volumes_from:
             - confdata
+        labels:
+            io.rancher.sidekicks: confdata
         volumes:
             - ./conf/scripts/mysql:/docker-entrypoint-initdb.d
             - ./conf/mysql/:/etc/mysql/conf.d
@@ -18,6 +20,8 @@ services:
             - 9763:9763
         volumes_from:
             - confdata
+        labels:
+            io.rancher.sidekicks: confdata
         volumes:
             - ./conf/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
@@ -30,6 +34,8 @@ services:
             - 9764:9763
         volumes_from:
             - confdata
+        labels:
+            io.rancher.sidekicks: confdata
         volumes:
             - ./conf/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
             - ./conf/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
@@ -43,6 +49,8 @@ services:
             - 9765:9763
         volumes_from:
             - confdata
+        labels:
+            io.rancher.sidekicks: confdata
         volumes:
             - ./conf/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
@@ -55,6 +63,8 @@ services:
             - 9766:9763
         volumes_from:
             - confdata
+        labels:
+            io.rancher.sidekicks: confdata
         volumes:
             - ./conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1repository/conf/datasources/master-datasources.xml
             - ./conf/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
@@ -68,6 +78,8 @@ services:
             - 9767:9763
         volumes_from:
             - confdata
+        labels:
+            io.rancher.sidekicks: confdata
         volumes:
             - ./conf/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
@@ -82,6 +94,8 @@ services:
             - 9768:9763
         volumes_from:
             - confdata
+        labels:
+            io.rancher.sidekicks: confdata
         volumes:
             - ./conf/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
@@ -94,6 +108,8 @@ services:
             - 9769:9763
         volumes_from:
             - confdata
+        labels:
+            io.rancher.sidekicks: confdata
         volumes:
             - ./conf/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
@@ -101,4 +117,4 @@ services:
 
     confdata:
         # build: .
-        image: localhost:5000/eristoddle/wso2-dev-config
+        image: eristoddle/wso2-dev-config
