--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -9,8 +9,8 @@ services:
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - ./conf/scripts/mysql:/docker-entrypoint-initdb.d
-            - ./conf/mysql/:/etc/mysql/conf.d
+            - /conf/scripts/mysql:/docker-entrypoint-initdb.d
+            - /conf/mysql/:/etc/mysql/conf.d
             - /var/lib/mysql
 
     esb:
@@ -23,9 +23,9 @@ services:
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - ./conf/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
-            - ./conf/wso2esb/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
+            - /conf/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - /conf/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - /conf/wso2esb/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
 
     brs:
         image: eristoddle/wso2esb:5.0.0
@@ -37,9 +37,9 @@ services:
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - ./conf/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - ./conf/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
-            - ./conf/brs/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
+            - /conf/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - /conf/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - /conf/brs/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
 
     greg:
         image: eristoddle/wso2greg:5.3.0
@@ -52,9 +52,9 @@ services:
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - ./conf/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
-            - ./conf/wso2greg/repository/conf/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
+            - /conf/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
+            - /conf/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
+            - /conf/wso2greg/repository/conf/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
 
     dss:
         image: eristoddle/wso2dss:3.5.1
@@ -66,9 +66,9 @@ services:
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - ./conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
-            - ./conf/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
+            - /conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1repository/conf/datasources/master-datasources.xml
+            - /conf/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
+            - /conf/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
 
     is:
         image: eristoddle/wso2is:5.2.0
@@ -81,11 +81,11 @@ services:
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - ./conf/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
-            - ./conf/wso2is/repository/conf/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
-            - ./conf/wso2is/repository/conf/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
-            - ./conf/wso2is/repository/conf/security/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
+            - /conf/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
+            - /conf/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
+            - /conf/wso2is/repository/conf/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
+            - /conf/wso2is/repository/conf/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
+            - /conf/wso2is/repository/conf/security/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
 
     am:
         image: eristoddle/wso2am:2.0.0
@@ -97,9 +97,9 @@ services:
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - ./conf/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
-            - ./conf/wso2am/repository/conf/security/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
+            - /conf/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
+            - /conf/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
+            - /conf/wso2am/repository/conf/security/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
 
     as:
         image: eristoddle/wso2as:5.3.0
@@ -111,9 +111,9 @@ services:
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - ./conf/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
-            - ./conf/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
+            - /conf/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
+            - /conf/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
+            - /conf/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
 
     confdata:
         # build: .
