--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -1,17 +1,27 @@
 version: '2'
+volumes:
+    mysql:
+
 services:
+    confdata:
+        # TODO: Temporarily pulling generic config volume from dockerhub to test things. Change this.
+        image: eristoddle/wso2-dev-config
+        container_name: confdata
+        volumes:
+            - /conf
+        command: "chown -R 1000:1000 /conf"
     mysql:
         image: mysql:5.7.10
         environment:
             - MYSQL_ROOT_PASSWORD=password
         volumes_from:
-            - confdata
+            - container:confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
             - /conf/scripts/mysql:/docker-entrypoint-initdb.d
             - /conf/mysql/:/etc/mysql/conf.d
-            - /var/lib/mysql
+            - mysql:/var/lib/mysql
 
     esb:
         image: eristoddle/wso2esb:5.0.0
@@ -19,7 +29,7 @@ services:
             - 9443:9443
             - 9763:9763
         volumes_from:
-            - confdata
+            - container:confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
@@ -33,7 +43,7 @@ services:
             - 9444:9443
             - 9764:9763
         volumes_from:
-            - confdata
+            - container:confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
@@ -48,7 +58,7 @@ services:
             - 9445:9443
             - 9765:9763
         volumes_from:
-            - confdata
+            - container:confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
@@ -62,11 +72,11 @@ services:
             - 9446:9443
             - 9766:9763
         volumes_from:
-            - confdata
+            - container:confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1repository/conf/datasources/master-datasources.xml
+            - /conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1/repository/conf/datasources/master-datasources.xml
             - /conf/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
             - /conf/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
 
@@ -77,7 +87,7 @@ services:
             - 9447:9443
             - 9767:9763
         volumes_from:
-            - confdata
+            - container:confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
@@ -93,7 +103,7 @@ services:
             - 9448:9443
             - 9768:9763
         volumes_from:
-            - confdata
+            - container:confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
@@ -107,14 +117,10 @@ services:
             - 9449:9443
             - 9769:9763
         volumes_from:
-            - confdata
+            - container:confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
             - /conf/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
             - /conf/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
             - /conf/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
-
-    confdata:
-        # build: .
-        image: eristoddle/wso2-dev-config
