--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -1,55 +1,58 @@
 version: '2'
-volumes:
-    mysql:
+# volumes:
+#     mysql:
 
 services:
     confdata:
         # TODO: Temporarily pulling generic config volume from dockerhub to test things. Change this.
         image: eristoddle/wso2-dev-config
         container_name: confdata
+        # This syncs the data from this container to the host so containers below can mount
+        # NOTE: There is other ways to do this with named volumes and volume drivers that may be better
+        labels:
+            io.rancher.container.start_once: true
         volumes:
-            - /conf
-        command: "chown -R 1000:1000 /conf"
+            - /tmp/wso2-conf:/conf
     mysql:
         image: mysql:5.7.10
         environment:
             - MYSQL_ROOT_PASSWORD=password
-        volumes_from:
-            - container:confdata
+        depends_on:
+            - confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/scripts/mysql:/docker-entrypoint-initdb.d
-            - /conf/mysql/:/etc/mysql/conf.d
-            - mysql:/var/lib/mysql
+            - /tmp/wso2-conf/scripts/mysql:/docker-entrypoint-initdb.d
+            - /tmp/wso2-conf/mysql/:/etc/mysql/conf.d
+            - /var/lib/mysql
 
     esb:
         image: eristoddle/wso2esb:5.0.0
         ports:
             - 9443:9443
             - 9763:9763
-        volumes_from:
-            - container:confdata
+        depends_on:
+            - confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - /conf/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
-            - /conf/wso2esb/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
+            - /tmp/wso2-conf/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - /tmp/wso2-conf/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - /tmp/wso2-conf/wso2esb/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
 
     brs:
         image: eristoddle/wso2esb:5.0.0
         ports:
             - 9444:9443
             - 9764:9763
-        volumes_from:
-            - container:confdata
+        depends_on:
+            - confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
-            - /conf/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
-            - /conf/brs/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
+            - /tmp/wso2-conf/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
+            - /tmp/wso2-conf/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
+            - /tmp/wso2-conf/brs/repository/conf/security/authenticators.xml:/opt/wso2esb-5.0.0/repository/conf/security/authenticators.xml
 
     greg:
         image: eristoddle/wso2greg:5.3.0
@@ -57,28 +60,28 @@ services:
         ports:
             - 9445:9443
             - 9765:9763
-        volumes_from:
-            - container:confdata
+        depends_on:
+            - confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
-            - /conf/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
-            - /conf/wso2greg/repository/conf/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
+            - /tmp/wso2-conf/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
+            - /tmp/wso2-conf/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
+            - /tmp/wso2-conf/wso2greg/repository/conf/registry.xml:/opt/wso2greg-5.3.0/repository/conf/registry.xml
 
     dss:
         image: eristoddle/wso2dss:3.5.1
         ports:
             - 9446:9443
             - 9766:9763
-        volumes_from:
-            - container:confdata
+        depends_on:
+            - confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1/repository/conf/datasources/master-datasources.xml
-            - /conf/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
-            - /conf/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
+            - /tmp/wso2-conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1/repository/conf/datasources/master-datasources.xml
+            - /tmp/wso2-conf/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
+            - /tmp/wso2-conf/wso2dss/repository/conf/security/authenticators.xml:/opt/wso2dss-3.5.1/repository/conf/security/authenticators.xml
 
     is:
         image: eristoddle/wso2is:5.2.0
@@ -86,41 +89,41 @@ services:
         ports:
             - 9447:9443
             - 9767:9763
-        volumes_from:
-            - container:confdata
+        depends_on:
+            - confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
-            - /conf/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
-            - /conf/wso2is/repository/conf/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
-            - /conf/wso2is/repository/conf/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
-            - /conf/wso2is/repository/conf/security/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
+            - /tmp/wso2-conf/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
+            - /tmp/wso2-conf/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
+            - /tmp/wso2-conf/wso2is/repository/conf/registry.xml:/opt/wso2is-5.2.0/repository/conf/registry.xml
+            - /tmp/wso2-conf/wso2is/repository/conf/user-mgt.xml:/opt/wso2is-5.2.0/repository/conf/user-mgt.xml
+            - /tmp/wso2-conf/wso2is/repository/conf/security/sso-idp-config.xml:/opt/wso2is-5.2.0/repository/conf/security/sso-idp-config.xml
 
     am:
         image: eristoddle/wso2am:2.0.0
         ports:
             - 9448:9443
             - 9768:9763
-        volumes_from:
-            - container:confdata
+        depends_on:
+            - confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
-            - /conf/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
-            - /conf/wso2am/repository/conf/security/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
+            - /tmp/wso2-conf/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
+            - /tmp/wso2-conf/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
+            - /tmp/wso2-conf/wso2am/repository/conf/security/authenticators.xml:/opt/wso2am-2.0.0/repository/conf/security/authenticators.xml
 
     as:
         image: eristoddle/wso2as:5.3.0
         ports:
             - 9449:9443
             - 9769:9763
-        volumes_from:
-            - container:confdata
+        depends_on:
+            - confdata
         labels:
             io.rancher.sidekicks: confdata
         volumes:
-            - /conf/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
-            - /conf/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
-            - /conf/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
+            - /tmp/wso2-conf/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
+            - /tmp/wso2-conf/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
+            - /tmp/wso2-conf/wso2as/repository/conf/security/authenticators.xml:/opt/wso2as-5.3.0/repository/conf/security/authenticators.xml
