--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -1,16 +1,20 @@
 version: '2'
 # volumes:
 #     mysql:
+#
+#     confdata:
 
 services:
     confdata:
         # TODO: Temporarily pulling generic config volume from dockerhub to test things. Change this.
+        # This the container built from the Dockerfile in this project
         image: eristoddle/wso2-dev-config
         container_name: confdata
-        # This syncs the data from this container to the host so containers below can mount
+        # This syncs the data from this container to the host so containers below can mount the folder and shuts down
         # NOTE: There is other ways to do this with named volumes and volume drivers that may be better
         labels:
             io.rancher.container.start_once: true
+            io.rancher.container.pull_image: always
         volumes:
             - /tmp/wso2-conf:/conf
     mysql:
@@ -19,8 +23,6 @@ services:
             - MYSQL_ROOT_PASSWORD=password
         depends_on:
             - confdata
-        labels:
-            io.rancher.sidekicks: confdata
         volumes:
             - /tmp/wso2-conf/scripts/mysql:/docker-entrypoint-initdb.d
             - /tmp/wso2-conf/mysql/:/etc/mysql/conf.d
@@ -33,8 +35,6 @@ services:
             - 9763:9763
         depends_on:
             - confdata
-        labels:
-            io.rancher.sidekicks: confdata
         volumes:
             - /tmp/wso2-conf/wso2esb/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
             - /tmp/wso2-conf/wso2esb/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
@@ -47,8 +47,6 @@ services:
             - 9764:9763
         depends_on:
             - confdata
-        labels:
-            io.rancher.sidekicks: confdata
         volumes:
             - /tmp/wso2-conf/brs/repository/conf/datasources/master-datasources.xml:/opt/wso2esb-5.0.0/repository/conf/datasources/master-datasources.xml
             - /tmp/wso2-conf/brs/repository/conf/registry.xml:/opt/wso2esb-5.0.0/repository/conf/registry.xml
@@ -62,8 +60,6 @@ services:
             - 9765:9763
         depends_on:
             - confdata
-        labels:
-            io.rancher.sidekicks: confdata
         volumes:
             - /tmp/wso2-conf/wso2greg/repository/conf/datasources/master-datasources.xml:/opt/wso2greg-5.3.0/repository/conf/datasources/master-datasources.xml
             - /tmp/wso2-conf/wso2greg/repository/conf/security/authenticators.xml:/opt/wso2greg-5.3.0/repository/conf/security/authenticators.xml
@@ -76,8 +72,6 @@ services:
             - 9766:9763
         depends_on:
             - confdata
-        labels:
-            io.rancher.sidekicks: confdata
         volumes:
             - /tmp/wso2-conf/wso2dss/repository/conf/datasources/master-datasources.xml:/opt/wso2dss-3.5.1/repository/conf/datasources/master-datasources.xml
             - /tmp/wso2-conf/wso2dss/repository/conf/registry.xml:/opt/wso2dss-3.5.1/repository/conf/registry.xml
@@ -91,8 +85,6 @@ services:
             - 9767:9763
         depends_on:
             - confdata
-        labels:
-            io.rancher.sidekicks: confdata
         volumes:
             - /tmp/wso2-conf/wso2is/repository/conf/datasources/master-datasources.xml:/opt/wso2is-5.2.0/repository/conf/datasources/master-datasources.xml
             - /tmp/wso2-conf/wso2is/repository/conf/carbon.xml:/opt/wso2is-5.2.0/repository/conf/carbon.xml
@@ -107,8 +99,6 @@ services:
             - 9768:9763
         depends_on:
             - confdata
-        labels:
-            io.rancher.sidekicks: confdata
         volumes:
             - /tmp/wso2-conf/wso2am/repository/conf/datasources/master-datasources.xml:/opt/wso2am-2.0.0/repository/conf/datasources/master-datasources.xml
             - /tmp/wso2-conf/wso2am/repository/conf/registry.xml:/opt/wso2am-2.0.0/repository/conf/registry.xml
@@ -121,8 +111,6 @@ services:
             - 9769:9763
         depends_on:
             - confdata
-        labels:
-            io.rancher.sidekicks: confdata
         volumes:
             - /tmp/wso2-conf/wso2as/repository/conf/datasources/master-datasources.xml:/opt/wso2as-5.3.0/repository/conf/datasources/master-datasources.xml
             - /tmp/wso2-conf/wso2as/repository/conf/registry.xml:/opt/wso2as-5.3.0/repository/conf/registry.xml
