--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: '2'
 services:
-    mysql:
+    wso2mysql:
         image: mysql:5.7.10
         environment:
             - MYSQL_ROOT_PASSWORD=password
+        # NOTE: Ports forwarded for local dev only
+        ports:
+            - 3306:3306
         volumes:
             - ./conf/wso2scripts/mysql:/docker-entrypoint-initdb.d
             - ./conf/wso2mysql/:/etc/mysql/conf.d
@@ -20,16 +23,16 @@ services:
             - ./conf/wso2esb/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
 
     # NOTE: There is no standalone BRS any more. So this is another ESB but uses configs from the /conf/wso2brs folder
-    brs:
-        image: eristoddle/wso2esb:5.0.0
-        ports:
-            - 9444:9443
-            - 9764:9763
-        volumes:
-            - ./conf/wso2brs/repository/conf/datasources/master-datasources.xml:/mnt/wso2esb/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2brs/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
-            - ./conf/wso2brs/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
-
+    # brs:
+    #     image: eristoddle/wso2esb:5.0.0
+    #     ports:
+    #         - 9444:9443
+    #         - 9764:9763
+    #     volumes:
+    #         - ./conf/wso2brs/repository/conf/datasources/master-datasources.xml:/mnt/wso2esb/repository/conf/datasources/master-datasources.xml
+    #         - ./conf/wso2brs/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
+    #         - ./conf/wso2brs/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
+    #
     greg:
         image: eristoddle/wso2greg:5.3.0
         command: -Dsetup
@@ -40,17 +43,17 @@ services:
             - ./conf/wso2greg/repository/conf/datasources/master-datasources.xml:/mnt/wso2greg/repository/conf/datasources/master-datasources.xml
             - ./conf/wso2greg/repository/conf/security/authenticators.xml:/mnt/wso2greg/repository/conf/security/authenticators.xml
             - ./conf/wso2greg/repository/conf/registry.xml:/mnt/wso2greg/repository/conf/registry.xml
-
-    dss:
-        image: eristoddle/wso2dss:3.5.1
-        ports:
-            - 9446:9443
-            - 9766:9763
-        volumes:
-            - ./conf/wso2dss/repository/conf/datasources/master-datasources.xml:/mnt/wso2dss/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2dss/repository/conf/registry.xml:/mnt/wso2dss/repository/conf/registry.xml
-            - ./conf/wso2dss/repository/conf/security/authenticators.xml:/mnt/wso2dss/repository/conf/security/authenticators.xml
-
+    #
+    # dss:
+    #     image: eristoddle/wso2dss:3.5.1
+    #     ports:
+    #         - 9446:9443
+    #         - 9766:9763
+    #     volumes:
+    #         - ./conf/wso2dss/repository/conf/datasources/master-datasources.xml:/mnt/wso2dss/repository/conf/datasources/master-datasources.xml
+    #         - ./conf/wso2dss/repository/conf/registry.xml:/mnt/wso2dss/repository/conf/registry.xml
+    #         - ./conf/wso2dss/repository/conf/security/authenticators.xml:/mnt/wso2dss/repository/conf/security/authenticators.xml
+    #
     is:
         image: eristoddle/wso2is:5.2.0
         hostname: wso2identity
@@ -63,23 +66,23 @@ services:
             - ./conf/wso2is/repository/conf/registry.xml:/mnt/wso2is/repository/conf/registry.xml
             - ./conf/wso2is/repository/conf/user-mgt.xml:/mnt/wso2is/repository/conf/user-mgt.xml
             - ./conf/wso2is/repository/conf/security/sso-idp-config.xml:/mnt/wso2is/repository/conf/security/sso-idp-config.xml
-
-    am:
-        image: eristoddle/wso2am:2.0.0
-        ports:
-            - 9448:9443
-            - 9768:9763
-        volumes:
-            - ./conf/wso2am/repository/conf/datasources/master-datasources.xml:/mnt/wso2am/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2am/repository/conf/registry.xml:/mnt/wso2am/repository/conf/registry.xml
-            - ./conf/wso2am/repository/conf/security/authenticators.xml:/mnt/wso2am/repository/conf/security/authenticators.xml
-
-    as:
-        image: eristoddle/wso2as:5.3.0
-        ports:
-            - 9449:9443
-            - 9769:9763
-        volumes:
-            - ./conf/wso2as/repository/conf/datasources/master-datasources.xml:/mnt/wso2as/repository/conf/datasources/master-datasources.xml
-            - ./conf/wso2as/repository/conf/registry.xml:/mnt/wso2as/repository/conf/registry.xml
-            - ./conf/wso2as/repository/conf/security/authenticators.xml:/mnt/wso2as/repository/conf/security/authenticators.xml
+    #
+    # am:
+    #     image: eristoddle/wso2am:2.0.0
+    #     ports:
+    #         - 9448:9443
+    #         - 9768:9763
+    #     volumes:
+    #         - ./conf/wso2am/repository/conf/datasources/master-datasources.xml:/mnt/wso2am/repository/conf/datasources/master-datasources.xml
+    #         - ./conf/wso2am/repository/conf/registry.xml:/mnt/wso2am/repository/conf/registry.xml
+    #         - ./conf/wso2am/repository/conf/security/authenticators.xml:/mnt/wso2am/repository/conf/security/authenticators.xml
+    #
+    # as:
+    #     image: eristoddle/wso2as:5.3.0
+    #     ports:
+    #         - 9449:9443
+    #         - 9769:9763
+    #     volumes:
+    #         - ./conf/wso2as/repository/conf/datasources/master-datasources.xml:/mnt/wso2as/repository/conf/datasources/master-datasources.xml
+    #         - ./conf/wso2as/repository/conf/registry.xml:/mnt/wso2as/repository/conf/registry.xml
+    #         - ./conf/wso2as/repository/conf/security/authenticators.xml:/mnt/wso2as/repository/conf/security/authenticators.xml
